// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/List/ListItem Disabled ListItem 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: undefinedpx;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-4 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: auto;
  overflow: auto;
  overflow-x: hidden;
  background: #ffffff;
}

.emotion-5 {
  background-color: rgba(84,94,255,0);
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-5>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-5[role='option'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-5[role='option']:hover {
  cursor: initial;
}

.emotion-5[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-6 {
  color: #1B214F;
  font-weight: initial;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 strong {
  font-weight: bold;
}

.emotion-6 span {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-10 .react-switch-handle {
  cursor: not-allowed!important;
  border: 2px solid #b7c3d8!important;
  box-sizing: border-box!important;
  -webkit-transform: translateX(0)!important;
  -moz-transform: translateX(0)!important;
  -ms-transform: translateX(0)!important;
  transform: translateX(0)!important;
}

.emotion-10 .react-switch-handle:hover {
  box-shadow: 0;
  background: !important;
}

.emotion-10 .react-switch-bg {
  cursor: not-allowed!important;
  margin-right: 0!important;
  margin-left: 0!important;
}

.emotion-10 .react-switch-bg:hover~.react-switch-handle {
  box-shadow: 0;
  background: !important;
}

.emotion-11 {
  background-color: rgba(84,94,255,0);
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-11>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-11 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-11[role='option'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-11[role='option']:hover {
  cursor: initial;
}

.emotion-11[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-11[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-11[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-11[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-13 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-15 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-15 path {
  fill: #1249C4;
}

.emotion-19 {
  opacity: 0.3;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-20 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-20:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-21 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-21+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-21+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-21:disabled+label {
  cursor: not-allowed;
}

.emotion-22 span {
  padding: 0;
}

.emotion-22 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-24 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-24 path {
  fill: white;
}

.emotion-28 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 0.5;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-29 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-29:disabled {
  cursor: default;
}

.emotion-30 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-31 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-31:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #c3cddf;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-31:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #c3cddf;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-32 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="1"
                data-testid="ictinus_list_item_1"
                id="react-aria-generated-id-option-1"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    This text option is disabled
                  </span>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="3"
                data-testid="ictinus_list_item_3"
                id="react-aria-generated-id-option-3"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    This Switch Option is disabled
                  </span>
                </div>
                <div
                  className="emotion-9"
                >
                  <div
                    className="emotion-10"
                  >
                    <div
                      style={
                        Object {
                          "MozTransition": "opacity 0.25s",
                          "MozUserSelect": "none",
                          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                          "WebkitTransition": "opacity 0.25s",
                          "WebkitUserSelect": "none",
                          "borderRadius": 4,
                          "direction": "ltr",
                          "display": "inline-block",
                          "msUserSelect": "none",
                          "opacity": 0.5,
                          "position": "relative",
                          "textAlign": "left",
                          "touchAction": "none",
                          "transition": "opacity 0.25s",
                          "userSelect": "none",
                        }
                      }
                    >
                      <div
                        className="react-switch-bg"
                        onClick={null}
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "MozTransition": "background 0.25s",
                            "WebkitTransition": "background 0.25s",
                            "background": "#dbe1eb",
                            "borderRadius": 4,
                            "cursor": "default",
                            "height": 8,
                            "margin": 6,
                            "position": "relative",
                            "transition": "background 0.25s",
                            "width": 36,
                          }
                        }
                      />
                      <div
                        className="react-switch-handle"
                        onClick={[Function]}
                        onMouseDown={null}
                        onTouchCancel={null}
                        onTouchEnd={null}
                        onTouchMove={null}
                        onTouchStart={null}
                        style={
                          Object {
                            "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "background": "#f3f5f8",
                            "border": 0,
                            "borderRadius": "50%",
                            "boxShadow": null,
                            "cursor": "default",
                            "display": "inline-block",
                            "height": 20,
                            "outline": 0,
                            "position": "absolute",
                            "top": 0,
                            "transform": "translateX(0px)",
                            "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "width": 20,
                          }
                        }
                      />
                      <input
                        data-testid="switch"
                        disabled={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyUp={[Function]}
                        role="switch"
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "height": 1,
                            "margin": -1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "width": 1,
                          }
                        }
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-11 "
                data-key="4"
                data-testid="ictinus_list_item_4"
                id="react-aria-generated-id-option-4"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-9"
                >
                  <div
                    className="emotion-13"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-14"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-15"
                      />
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    This Avatar Option is disabled
                  </span>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="5"
                data-testid="ictinus_list_item_5"
                id="react-aria-generated-id-option-5"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-19"
                  >
                    <span
                      className="emotion-20"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        className="emotion-21"
                        data-testid="checkbox"
                        disabled={true}
                        id="styled-checkbox-_00"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="emotion-22"
                        htmlFor="styled-checkbox-_00"
                      >
                        <span
                          className="emotion-14"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-24"
                          />
                        </span>
                      </label>
                    </span>
                  </span>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    This Checkbox Option is disabled
                  </span>
                </div>
              </li>
              <li
                aria-disabled={true}
                aria-selected={false}
                className="emotion-5 "
                data-key="6"
                data-testid="ictinus_list_item_6"
                id="react-aria-generated-id-option-6"
                onBlur={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onTouchStart={[Function]}
                role="option"
              >
                <div
                  className="emotion-9"
                >
                  <span
                    className="emotion-28"
                    data-testid="radio-input"
                  >
                    <input
                      checked={false}
                      className="emotion-29"
                      disabled={true}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      required={false}
                      type="radio"
                      value="on"
                    />
                    <span
                      className="emotion-30"
                    >
                      <span
                        className="emotion-31"
                      />
                      <span
                        className="emotion-32"
                      />
                    </span>
                  </span>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    This Radio Option is disabled
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List/ListItem List Item Compilations 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin-bottom: 0.25rem;
}

.emotion-3 {
  border: 0.0625rem solid #E7E8FF;
  border-radius: 0.25rem;
  width: undefinedpx;
  box-shadow: 0rem 0.25rem 0.5rem 0rem #10306612;
}

.emotion-4 {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  border-radius: 0.25rem;
  width: 100%;
  height: auto;
  overflow: auto;
  overflow-x: hidden;
  background: #ffffff;
}

.emotion-5 {
  background-color: rgba(84,94,255,0);
  opacity: 1;
  cursor: initial;
}

.emotion-5>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-5[role='option'] {
  padding: 0 0.75rem;
  min-height: 3.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-5[role='option']:hover {
  background-color: rgba(84,94,255,0.06);
  cursor: pointer;
}

.emotion-5[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-5[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
}

.emotion-5[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-6 {
  color: #1B214F;
  font-weight: initial;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: inherit;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 strong {
  font-weight: bold;
}

.emotion-6 span {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-7 {
  background-color: rgba(84,94,255,0);
  opacity: 1;
  cursor: initial;
}

.emotion-7>div {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-7 span[role='presentation'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  font-weight: 700;
}

.emotion-7[role='option'] {
  padding: 0 0.75rem;
  min-height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.75rem;
}

.emotion-7[role='option']:hover {
  background-color: rgba(84,94,255,0.06);
  cursor: pointer;
}

.emotion-7[data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7[aria-selected='true'] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-7[aria-selected='true']>div {
  color: #1552DD;
  font-family: Roboto;
  font-weight: 500;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
}

.emotion-7[aria-selected='true'][data-focus-visible] {
  background-color: rgba(84,94,255,0.06);
}

.emotion-14 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1rem;
  font-size: 0.75rem;
  letter-spacing: 0.015625rem;
  color: #686BB3;
}

.emotion-22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-23 {
  position: relative;
  border-radius: 50%;
  width: 2.25rem;
  height: 2.25rem;
  color: #175bf5;
  border: 0;
  opacity: 1;
  cursor: pointer;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  outline: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -webkit-tap-highlight-color: transparent;
}

.emotion-24 {
  top: 0;
  left: 0;
  width: 100%;
  cursor: inherit;
  height: 100%;
  margin: 0;
  padding: 0;
  z-index: 1;
  position: absolute;
  opacity: 0;
}

.emotion-24:disabled {
  cursor: default;
}

.emotion-25 {
  position: relative;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: box-shadow 0.3s ease;
  transition: box-shadow 0.3s ease;
}

.emotion-26 {
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
  border-radius: 50%;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  position: absolute;
}

.emotion-26:before {
  content: '';
  display: inline-block;
  box-sizing: border-box;
  margin: 0.125rem 0.75rem 0.125rem 0.125rem;
  border: solid 2px #b7c3d8;
  border-radius: 50%;
  width: 1.25rem;
  height: 1.25rem;
  vertical-align: top;
  -webkit-transition: border-color 0.2s;
  transition: border-color 0.2s;
}

.emotion-26:after {
  content: '';
  display: block;
  position: absolute;
  top: 0.0625rem;
  left: 0.0625rem;
  border-radius: 50%;
  width: 0.75rem;
  height: 0.75rem;
  background-color: #b7c3d8;
  -webkit-transform: translate(5px, 5px) scale(0);
  -moz-transform: translate(5px, 5px) scale(0);
  -ms-transform: translate(5px, 5px) scale(0);
  transform: translate(5px, 5px) scale(0);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.emotion-27 {
  position: absolute;
  border-radius: 50%;
  width: 1.5rem;
  height: 1.5rem;
  -webkit-transition: all 0.2s ease;
  transition: all 0.2s ease;
}

.emotion-42 {
  opacity: 1;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-43 {
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.emotion-43:before {
  display: none;
  border-radius: 100%;
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  content: ' ';
  width: 3rem;
  height: 3rem;
  position: absolute;
}

.emotion-43:hover:before {
  display: block;
  background: rgba(0, 0, 0, 0.05);
}

.emotion-44 {
  border: 0;
  border-radius: 0.125rem;
  width: 1.5rem;
  height: 1.5rem;
  position: absolute;
  opacity: 0;
}

.emotion-44+label {
  position: relative;
  cursor: pointer;
  padding: 0;
}

.emotion-44+label:before {
  content: '';
  -webkit-transition: all 0.2s;
  transition: all 0.2s;
  display: inline-block;
  vertical-align: text-top;
  width: 1.5rem;
  height: 1.5rem;
  background: inherit;
  box-shadow: inset 0px 0px 0px 0.125rem #b7c3d8;
  border-radius: 0.25rem;
}

.emotion-44:disabled+label {
  cursor: not-allowed;
}

.emotion-45 span {
  padding: 0;
}

.emotion-45 svg {
  position: absolute;
  top: 0;
  display: none;
}

.emotion-46 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-47 {
  fill: white;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-47 path {
  fill: white;
}

.emotion-64 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-64 .react-switch-handle {
  cursor: unset!important;
  border: 2px solid #b7c3d8!important;
  box-sizing: border-box!important;
  -webkit-transform: translateX(0)!important;
  -moz-transform: translateX(0)!important;
  -ms-transform: translateX(0)!important;
  transform: translateX(0)!important;
}

.emotion-64 .react-switch-handle:hover {
  box-shadow: rgba(14,14,23,0.1) 0 0 0 5px;
  background: #dbe1eb!important;
}

.emotion-64 .react-switch-bg {
  cursor: unset!important;
  margin-right: 0!important;
  margin-left: 0!important;
}

.emotion-64 .react-switch-bg:hover~.react-switch-handle {
  box-shadow: rgba(14,14,23,0.1) 0 0 0 5px;
  background: #dbe1eb!important;
}

.emotion-74 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #b9cdfc;
  box-sizing: border-box;
  background-color: #e7eefe;
  color: #1249C4;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-family: Roboto;
  font-weight: 500;
  line-height: 0.875rem;
  font-size: 0.625rem;
  letter-spacing: 0.00625rem;
}

.emotion-74 img {
  border-radius: 6.25rem;
  width: 100%;
  height: 100%;
}

.emotion-76 {
  fill: #1249C4;
  width: 1rem;
  height: 1rem;
}

.emotion-76 path {
  fill: #1249C4;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="1"
                data-testid="ictinus_list_item_1"
                id="react-aria-generated-id-option-1"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text only
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="2"
                data-testid="ictinus_list_item_2"
                id="react-aria-generated-id-option-2"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text only (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="3"
                data-testid="ictinus_list_item_3"
                id="react-aria-generated-id-option-3"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text
                  </span>
                  <p
                    className="emotion-14"
                  >
                    with Secondary Help Text
                  </p>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="4"
                data-testid="ictinus_list_item_4"
                id="react-aria-generated-id-option-4"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Text (compact)
                  </span>
                  <p
                    className="emotion-14"
                  >
                    with Secondary Help Text
                  </p>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="5"
                data-testid="ictinus_list_item_5"
                id="react-aria-generated-id-option-5"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <span
                    className="emotion-23"
                    data-testid="radio-input"
                  >
                    <input
                      checked={false}
                      className="emotion-24"
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      required={false}
                      type="radio"
                      value="on"
                    />
                    <span
                      className="emotion-25"
                    >
                      <span
                        className="emotion-26"
                      />
                      <span
                        className="emotion-27"
                      />
                    </span>
                  </span>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Radio
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="6"
                data-testid="ictinus_list_item_6"
                id="react-aria-generated-id-option-6"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <span
                    className="emotion-23"
                    data-testid="radio-input"
                  >
                    <input
                      checked={false}
                      className="emotion-24"
                      disabled={false}
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      required={false}
                      type="radio"
                      value="on"
                    />
                    <span
                      className="emotion-25"
                    >
                      <span
                        className="emotion-26"
                      />
                      <span
                        className="emotion-27"
                      />
                    </span>
                  </span>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Radio (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="7"
                data-testid="ictinus_list_item_7"
                id="react-aria-generated-id-option-7"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <span
                    className="emotion-42"
                  >
                    <span
                      className="emotion-43"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        className="emotion-44"
                        data-testid="checkbox"
                        disabled={false}
                        id="styled-checkbox-_00"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="emotion-45"
                        htmlFor="styled-checkbox-_00"
                      >
                        <span
                          className="emotion-46"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-47"
                          />
                        </span>
                      </label>
                    </span>
                  </span>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Checkbox
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="8"
                data-testid="ictinus_list_item_8"
                id="react-aria-generated-id-option-8"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <span
                    className="emotion-42"
                  >
                    <span
                      className="emotion-43"
                      onClick={[Function]}
                    >
                      <input
                        checked={false}
                        className="emotion-44"
                        data-testid="checkbox"
                        disabled={false}
                        id="styled-checkbox-_00"
                        onChange={[Function]}
                        onClick={[Function]}
                        type="checkbox"
                      />
                      <label
                        className="emotion-45"
                        htmlFor="styled-checkbox-_00"
                      >
                        <span
                          className="emotion-46"
                          onClick={[Function]}
                        >
                          <span
                            className="emotion-47"
                          />
                        </span>
                      </label>
                    </span>
                  </span>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Checkbox (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="9"
                data-testid="ictinus_list_item_9"
                id="react-aria-generated-id-option-9"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Switch
                  </span>
                </div>
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-64"
                  >
                    <div
                      style={
                        Object {
                          "MozTransition": "opacity 0.25s",
                          "MozUserSelect": "none",
                          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                          "WebkitTransition": "opacity 0.25s",
                          "WebkitUserSelect": "none",
                          "borderRadius": 4,
                          "direction": "ltr",
                          "display": "inline-block",
                          "msUserSelect": "none",
                          "opacity": 1,
                          "position": "relative",
                          "textAlign": "left",
                          "touchAction": "none",
                          "transition": "opacity 0.25s",
                          "userSelect": "none",
                        }
                      }
                    >
                      <div
                        className="react-switch-bg"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "MozTransition": "background 0.25s",
                            "WebkitTransition": "background 0.25s",
                            "background": "#dbe1eb",
                            "borderRadius": 4,
                            "cursor": "pointer",
                            "height": 8,
                            "margin": 6,
                            "position": "relative",
                            "transition": "background 0.25s",
                            "width": 36,
                          }
                        }
                      />
                      <div
                        className="react-switch-handle"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        style={
                          Object {
                            "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "background": "#f3f5f8",
                            "border": 0,
                            "borderRadius": "50%",
                            "boxShadow": null,
                            "cursor": "pointer",
                            "display": "inline-block",
                            "height": 20,
                            "outline": 0,
                            "position": "absolute",
                            "top": 0,
                            "transform": "translateX(0px)",
                            "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "width": 20,
                          }
                        }
                      />
                      <input
                        aria-checked={false}
                        checked={false}
                        data-testid="switch"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyUp={[Function]}
                        role="switch"
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "height": 1,
                            "margin": -1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "width": 1,
                          }
                        }
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="10"
                data-testid="ictinus_list_item_10"
                id="react-aria-generated-id-option-10"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Switch (compact)
                  </span>
                </div>
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-64"
                  >
                    <div
                      style={
                        Object {
                          "MozTransition": "opacity 0.25s",
                          "MozUserSelect": "none",
                          "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
                          "WebkitTransition": "opacity 0.25s",
                          "WebkitUserSelect": "none",
                          "borderRadius": 4,
                          "direction": "ltr",
                          "display": "inline-block",
                          "msUserSelect": "none",
                          "opacity": 1,
                          "position": "relative",
                          "textAlign": "left",
                          "touchAction": "none",
                          "transition": "opacity 0.25s",
                          "userSelect": "none",
                        }
                      }
                    >
                      <div
                        className="react-switch-bg"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        style={
                          Object {
                            "MozTransition": "background 0.25s",
                            "WebkitTransition": "background 0.25s",
                            "background": "#dbe1eb",
                            "borderRadius": 4,
                            "cursor": "pointer",
                            "height": 8,
                            "margin": 6,
                            "position": "relative",
                            "transition": "background 0.25s",
                            "width": 36,
                          }
                        }
                      />
                      <div
                        className="react-switch-handle"
                        onClick={[Function]}
                        onMouseDown={[Function]}
                        onTouchCancel={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        style={
                          Object {
                            "MozTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "WebkitTransition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "background": "#f3f5f8",
                            "border": 0,
                            "borderRadius": "50%",
                            "boxShadow": null,
                            "cursor": "pointer",
                            "display": "inline-block",
                            "height": 20,
                            "outline": 0,
                            "position": "absolute",
                            "top": 0,
                            "transform": "translateX(0px)",
                            "transition": "background-color 0.25s, transform 0.25s, box-shadow 0.15s",
                            "width": 20,
                          }
                        }
                      />
                      <input
                        aria-checked={false}
                        checked={false}
                        data-testid="switch"
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyUp={[Function]}
                        role="switch"
                        style={
                          Object {
                            "border": 0,
                            "clip": "rect(0 0 0 0)",
                            "height": 1,
                            "margin": -1,
                            "overflow": "hidden",
                            "padding": 0,
                            "position": "absolute",
                            "width": 1,
                          }
                        }
                        type="checkbox"
                      />
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          data-testid="ictinus_list"
        >
          <div
            style={
              Object {
                "height": "100%",
              }
            }
          >
            <ul
              aria-labelledby="react-aria-generated-id"
              className="emotion-4"
              id="react-aria-generated-id"
              onBlur={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onScroll={[Function]}
              role="listbox"
              style={
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "height": "100%",
                  "listStyle": "none",
                  "overflowY": "auto",
                  "padding": 0,
                  "position": "relative",
                }
              }
              tabIndex={0}
            >
              <li
                aria-selected={false}
                className="emotion-5 "
                data-key="11"
                data-testid="ictinus_list_item_11"
                id="react-aria-generated-id-option-11"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-74"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-46"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-76"
                      />
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Icon/Avatar
                  </span>
                </div>
              </li>
              <li
                aria-selected={false}
                className="emotion-7 "
                data-key="12"
                data-testid="ictinus_list_item_12"
                id="react-aria-generated-id-option-12"
                onBlur={[Function]}
                onClick={[Function]}
                onDragStart={[Function]}
                onDragStartCapture={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="option"
                tabIndex={-1}
              >
                <div
                  className="emotion-22"
                >
                  <div
                    className="emotion-74"
                    data-testid="_avatar"
                  >
                    <span
                      className="emotion-46"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-76"
                      />
                    </span>
                  </div>
                </div>
                <div
                  className="emotion-6"
                >
                  <span>
                    Option Icon/Avatar (compact)
                  </span>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/List/ListItem Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="the-listitem-component-represents-an-individual-item-in-the-list.-it-can-contain-eitherlistitemtext-or-listitemaction,-both,-or-custom-component."
      >
        The ListItem component represents an individual item in the List. It can contain eitherListItemText or ListItemAction, both, or custom component.
      </p>
    </div>
  </div>
</div>
`;
